# SongGen

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fix_emojis.py  imgui.ini  songgen  songgen-gtk  songgenAnleitung.odt  test_length  test_length.cpp  test_md5  test_md5.cpp  test_songlengths.sh
include/: AudioAnalyzer.h  AudioEffects.h  AudioPlayer.h  AudioSegmenter.h  BassLineEngine.h  ChordProgressionEngine.h  CredentialStore.h  CredentialStoreFactory.h  DataQualityAnalyzer.h  EncryptedFileCredentialStore.h  ExtractConfig.h  FileBrowser.h  FtpPlaintextMapping.h  GtkRenderer.h  HVSCDownloader.h  ImGuiRenderer.h  InstrumentExtractor.h  InstrumentModel.h  LibsecretCredentialStore.h  Logger.h  MIDIExporter.h  MediaDatabase.h  PatternCaptureEngine.h  RhythmEngine.h  SIDLibConverter.h  SongGenerator.h  SongStructureEngine.h  SonglengthsDB.h  TrainingModel.h
src/: AudioAnalyzer.cpp  AudioEffects.cpp  AudioPlayer.cpp  AudioSegmenter.cpp  BassLineEngine.cpp  ChordProgressionEngine.cpp  CredentialStoreFactory.cpp  DataQualityAnalyzer.cpp  EncryptedFileCredentialStore.cpp  FileBrowser.cpp  FtpPlaintextMapping.cpp  GtkRenderer.cpp  HVSCDownloader.cpp  ImGuiRenderer.cpp  InstrumentExtractor.cpp  InstrumentModel.cpp  LibsecretCredentialStore.cpp  MIDIExporter.cpp  MediaDatabase.cpp  NetworkCredentials.cpp  PatternCaptureEngine.cpp  RhythmEngine.cpp  SIDLibConverter.cpp  SongGenerator.cpp  SongStructureEngine.cpp  SonglengthsDB.cpp  TrainingModel.cpp  main.cpp  main_gtk.cpp  main_imgui.cpp
tests/: test_bookmarks.cpp  test_mapping.cpp  test_migrate.cpp
tools/: test_convert.cpp
